--- a/data-service-ng/angular.json
+++ b/data-service-ng/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "data-service": {
+    "data-service-ng": {
       "projectType": "application",
       "schematics": {},
       "root": "",
@@ -13,7 +13,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/data-service",
+            "outputPath": "dist/data-service-ng",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -63,18 +63,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "data-service:build"
+            "browserTarget": "data-service-ng:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "data-service:build:production"
+              "browserTarget": "data-service-ng:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "data-service:build"
+            "browserTarget": "data-service-ng:build"
           }
         },
         "test": {
@@ -111,15 +111,15 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "data-service:serve"
+            "devServerTarget": "data-service-ng:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "data-service:serve:production"
+              "devServerTarget": "data-service-ng:serve:production"
             }
           }
         }
       }
     }},
-  "defaultProject": "data-service"
+  "defaultProject": "data-service-ng"
 }
